--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "homebridge-nature-remo-sensor",
   "description": "Nature Remo plugin for homebridge: https://github.com/nfarina/homebridge",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "author": "Hiroaki Sano <hirosan18>",
-  "private": true,
   "bugs": {
     "url": "https://github.com/hirosan18/homebridge-nature-remo-sensor/issues"
   },
   "dependencies": {
-    "cron": "^1.6.0"
+    "cron": "^1.6.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
