--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebridge-nature-remo-sensor",
   "description": "Nature Remo plugin for homebridge: https://github.com/nfarina/homebridge",
-  "version": "1.5.0-beta.1",
+  "version": "1.5.0",
   "author": "Hiroaki Sano <hirosan18>",
   "private": true,
   "homepage": "https://github.com/hirosan18/homebridge-nature-remo-sensor#readme",
